# rust-bank-app

./: Cargo.toml  README.md
src/: adapter.rs  driver.rs  lib.rs  main.rs
src/adapter/: model.rs  module.rs  persistence.rs  repository.rs
src/adapter/model/: bank.rs  deposit_history.rs  graphql.rs
src/adapter/persistence/: dynamodb.rs  mysql.rs
src/adapter/repository/: bank.rs  deposit_history.rs  graphql.rs
src/app/: usecase.rs
src/app/model/: bank.rs  graphql.rs
src/app/usecase/: bank.rs  deposit_history.rs  graphql.rs
src/domain/: model.rs
src/domain/model/: bank.rs  graphql.rs
src/domain/repository/: bank.rs  graphql.rs
src/driver/: model.rs  modules.rs  routes.rs
src/driver/model/: bank.rs  graphql.rs
src/driver/routes/: bank.rs  deposit_history.rs  graphql.rs  resolver.rs  startup.rs
